--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         });
 
         // Typing effect (unchanged)
-        const text = "automating the future -- while building niche focused software today.";
+        const text = "Automation advances when data aligns. We specialize in the alignment.";
         const typingText = document.getElementById('typing-text');
         let index = 0;
 
